<resources>
	<string name="app_name">Togellenge</string>
	<string name="title_feed">Лента</string>
	<string name="title_create">Создать</string>
	<string name="title_profile">Профиль</string>
	<string name="reg_call_to_action">Ещё нет аккаунта? Зарегистрироваться</string>
	<string name="auth_call_to_action">Уже есть аккаунт? Войти</string>
	<string name="password">Пароль</string>
	<string name="email">E-mail</string>
	<string name="login">Войти</string>
	<string name="repeat_password">Повторите пароль</string>
	<string name="register">Зарегистрироваться</string>
	<string name="ready">Готово</string>
	<string name="chellenge_title">Название</string>
	<string name="challenge_description">Описание</string>
	<string name="confirmation_way_warning">Необходимо выбрать способ подтверждения выполнения челленджа</string>

	<string name="invalid_email">Неверный формат E-mail</string>
	<string name="wrong_password">Неверный E-mail или пароль</string>
	<string name="user_not_found">Пользователь не найден</string>
	<string name="already_has_user">Пользователь с таким E-mail уже создан</string>
	<string name="weak_password">Недостаточно безопасный пароль</string>
	<string name="passwords_not_match">Пароли не совпадают</string>

	<string name="error_occurred">Произошла ошибка</string>
	<string name="participants_count">Количество участников</string>
	<string name="confirmation_way">Способ подтверждения</string>

</resources>
