<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>

	<Button
		android:id="@+id/button_register"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="20dp"
		android:layout_marginStart="20dp"
		android:layout_marginTop="20dp"
		android:background="@drawable/rounded_button_active"
		android:text="@string/register"
		android:textColor="#ffffff"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/password_confirm_edit_register"
		/>

	<EditText
		android:id="@+id/email_edit_register"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="20dp"
		android:layout_marginStart="20dp"
		android:hint="@string/email"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		/>

	<EditText
		android:id="@+id/password_edit_register"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="20dp"
		android:layout_marginStart="20dp"
		android:layout_marginTop="20dp"
		android:hint="@string/password"
		android:inputType="textPassword"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/email_edit_register"
		/>

	<EditText
		android:id="@+id/password_confirm_edit_register"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="20dp"
		android:layout_marginStart="20dp"
		android:layout_marginTop="20dp"
		android:ems="10"
		android:hint="@string/repeat_password"
		android:inputType="textPassword"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/password_edit_register"
		/>

	<TextView
		android:id="@+id/textView3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/app_name"
		android:textSize="20sp"
		app:layout_constraintBottom_toTopOf="@+id/email_edit_register"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		/>


	<TextView
		android:id="@+id/already_have_account"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="40dp"
		android:text="@string/auth_call_to_action"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		/>

</androidx.constraintlayout.widget.ConstraintLayout>
