<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#ffffff"
	android:theme="@style/MaterialTheme"
	tools:context=".ui.fragments.CreateChallengeFragment"
	>

	<Button
		android:id="@+id/ready_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="20dp"
		android:background="@drawable/rounded_button_active"
		android:text="@string/ready"
		android:textColor="#ffffff"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		/>


	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/title_text_input"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_margin="20dp"
		android:hint="@string/chellenge_title"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/imageView"
		>

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/title_edit_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			/>

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/description_text_input"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="20dp"
		android:hint="@string/challenge_description"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/title_text_input"
		>

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/description_edit_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:cursorVisible="true"
			/>

	</com.google.android.material.textfield.TextInputLayout>

	<TextView
		android:id="@+id/choose_way"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="20dp"
		android:hint="Способ подтверждения"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/description_text_input"
		>

	</TextView>


	<ImageButton
		android:id="@+id/text_way_button"
		android:layout_width="100dp"
		android:layout_height="100dp"
		android:layout_marginTop="20dp"
		android:src="@drawable/ic_notebook"
		android:background="@drawable/circle_button_inactive"
		app:layout_constraintStart_toStartOf="parent"
		android:layout_marginStart="20dp"
		app:layout_constraintTop_toBottomOf="@+id/choose_way"
		/>

	<ImageButton
		android:id="@+id/photo_way_button"
		android:layout_width="100dp"
		android:layout_height="100dp"
		android:layout_marginTop="20dp"
		android:src="@drawable/ic_camera"
		android:background="@drawable/circle_button_inactive"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/choose_way"
		/>

	<ImageButton
		android:id="@+id/video_way_button"
		android:layout_width="100dp"
		android:layout_height="100dp"
		android:layout_marginTop="20dp"
		android:src="@drawable/ic_videocamera"
		android:background="@drawable/circle_button_inactive"
		android:layout_marginEnd="20dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/choose_way"
		/>

	<ImageView
		android:id="@+id/imageView"
		android:layout_width="100dp"
		android:layout_height="100dp"
		android:layout_marginTop="100dp"
		android:src="@drawable/shiba"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		/>

	<TextView
		android:id="@+id/confirmation_way_warning"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="20dp"
		android:gravity="center"
		android:text="@string/confirmation_way_warning"
		android:textColor="#ff0000"
		android:visibility="gone"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/photo_way_button"
		tools:visibility="visible"
		/>

</androidx.constraintlayout.widget.ConstraintLayout>